// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disabled Tickets render the component 1`] = `
<section
  className="tribe-editor__tickets__disabled"
>
  <div
    className="tribe-editor__tickets__disabled__icon"
  >
    <span>
      Ticket Inactive - Icon Placeholder
    </span>
  </div>
  
</section>
`;

exports[`Disabled Tickets render the component with description 1`] = `
<section
  className="tribe-editor__tickets__disabled"
>
  <div
    className="tribe-editor__tickets__disabled__icon"
  >
    <span>
      Ticket Inactive - Icon Placeholder
    </span>
  </div>
  <div
    className="tribe-editor__tickets__disabled__content"
  >
    
    <div
      className="tribe-editor__tickets__disabled__description"
    >
      Custom Description
    </div>
  </div>
</section>
`;

exports[`Disabled Tickets render the component with title 1`] = `
<section
  className="tribe-editor__tickets__disabled"
>
  <div
    className="tribe-editor__tickets__disabled__icon"
  >
    <span>
      Ticket Inactive - Icon Placeholder
    </span>
  </div>
  <div
    className="tribe-editor__tickets__disabled__content"
  >
    <h3
      className="tribe-editor__tickets__disabled__title"
    >
      Custom Title
    </h3>
    
  </div>
</section>
`;

exports[`Disabled Tickets uses a custom icon 1`] = `
<section
  className="tribe-editor__tickets__disabled"
>
  <div
    className="tribe-editor__tickets__disabled__icon"
  >
    <span>
      Icon Placeholder
    </span>
  </div>
  
</section>
`;
